# toolscript

./: .gitignore  Cargo.toml  Dockerfile  OPENAPI_GAPS.md  README.md
.github/workflows/: ci.yml
docs/plans/: 2026-02-21-code-mcp-design.md  2026-02-21-code-mcp-implementation.md  2026-02-22-http-auth-design.md  2026-02-22-luau-migration-design.md  2026-02-22-luau-migration-implementation.md  2026-02-23-auth-ux-design.md  2026-02-23-auth-ux-implementation.md  2026-02-23-format-validation-design.md  2026-02-23-format-validation-impl.md  2026-02-23-github-actions-ci-cd-design.md  2026-02-23-github-actions-ci-cd.md  2026-02-24-file-save-design.md  2026-02-24-file-save-impl.md  2026-02-24-frozen-parameters-impl.md  2026-02-25-toolscript-rebrand-design.md  2026-02-26-upstream-mcp-design.md  2026-02-26-upstream-mcp-impl.md  2026-03-01-luau-builtins-docs-design.md  2026-03-01-sandboxed-io-design.md  2026-03-01-sandboxed-io-impl.md
e2e/: conftest.py  mock_mcp_server.py  mock_mcp_sse_server.py  pyproject.toml
e2e/test_api/: models.py  seed.py
e2e/tests/: conftest.py  helpers.py  test_auth.py  test_mcp_mixed.py  test_mcp_scripts.py  test_mcp_sse.py  test_mcp_tools.py  test_stdio_scripts.py  test_stdio_tools.py
src/: cli.rs  config.rs  lib.rs  main.rs
src/codegen/: annotations.rs  generate.rs  luau_types.rs  manifest.rs  mod.rs  parser.rs
src/runtime/: executor.rs  http.rs  io.rs  mcp_client.rs  mod.rs  registry.rs  sandbox.rs  validate.rs
src/server/: auth.rs  builtins.rs  mod.rs  resources.rs  tools.rs
testdata/: advanced.yaml
tests/: codegen_integration.rs  full_roundtrip.rs  http_auth_test.rs  mcp_integration.rs  mock_mcp_server.rs
