[package]
name = "code-mcp"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
openapiv3 = "2"
mlua = { version = "0.10", features = ["lua54", "vendored", "async", "send", "serialize"] }
reqwest = { version = "0.12", features = ["json"] }
rmcp = { version = "0.16", features = ["server", "transport-io", "transport-streamable-http-server"] }
schemars = "0.8"
futures = "0.3"
axum = { version = "0.8", default-features = false, features = ["http1", "tokio"] }
tokio-util = "0.7"
tempfile = "3"
anyhow = "1"
thiserror = "2"
url = { version = "2", features = ["serde"] }

[dev-dependencies]
