[package]
name = "code-mcp"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
openapiv3 = "2"
mlua = { version = "0.10", features = ["luau", "async", "send", "serialize"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rmcp = { version = "0.16", features = ["server", "transport-io", "transport-streamable-http-server"] }
futures = "0.3"
axum = { version = "0.8", default-features = false, features = ["http1", "tokio", "json"] }
tokio-util = "0.7"
tempfile = "3"
toml = "0.8"
anyhow = "1"
thiserror = "2"
url = { version = "2", features = ["serde"] }
jsonwebtoken = "9"
tower = { version = "0.5", features = ["util"] }

[dev-dependencies]

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
# Lint groups
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

# Specific strict lints
unwrap_used = "deny"
expect_used = "deny"

# Allow noisy pedantic lints that don't add value
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
missing_docs_in_private_items = "allow"
