[project]
name = "toolscript-e2e"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "mcp>=1.12.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
    "PyJWT[crypto]>=2.9.0",
    "httpx>=0.28.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
pythonpath = ["tests"]
